# visual-source-rs

./: Cargo.toml  LICENSE  README.md  VisualSourceExamples.txt  vs_blocks.json
examples/: get-object-property-expanded.rs  get-object-property.rs
src/: block.rs  comment.rs  editor.rs  field_types.rs  hex.rs  lib.rs  macros.rs  main.rs  unique_id.rs  vs_blocks.json
src/field_types/: BrickColor.json  UDim.rs  UDim2.rs  bool.rs  brickcolor.rs  color3.rs  nil.rs  number.rs  object.rs  string.rs  tuple.rs  udim2.rs  vector2.rs  vector3.rs
