[package]
name = "visual-source-rs"
version = "1.1.1"
edition = "2024"
description = "A Rust crate for modifying, creating or reading RetroStudio's visual source scripts"
license = "MIT"
license-file = "LICENSE"
keywords = ["visualsource"]
repository = "https://github.com/Prouddani/visual-source-rs"
readme = "README.md"

[dependencies]
serde_json = "1.0.150"